Had to fix text alignment

--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -25,6 +25,5 @@ body {
   /* CHANGE ME */
   padding: 32px;
   margin-left: auto;
-  text-align:right;
 }
 
